--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ base-config/.terraform/*
 .terraform.lock.hcl
 terraform.tfstate
 terraform.tfstate.backup
+/env/*
+
+
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
